sonarqube bug fixes